--- a/client/src/app/components/homePage/QueueManagment/joinQueue.css
+++ b/client/src/app/components/homePage/QueueManagment/joinQueue.css
@@ -83,7 +83,7 @@
 .form-header-queue {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 1.5rem;
 }
 
